Fix checkbox/radio vertical alignment to text

--- a/src/components/CheckboxRadio/index.css
+++ b/src/components/CheckboxRadio/index.css
@@ -1,6 +1,8 @@
 .root {
   position: relative;
+  top: -.09375em;
   display: inline-flex;
+  vertical-align: middle;
 }
 
 .input {
@@ -10,10 +12,8 @@
 
 .control {
   position: relative;
-  top: .125em;
   display: inline-block;
   flex-shrink: 0;
-  vertical-align: middle;
   width: 1.25em;
   height: 1.25em;
   background-color: white;
